Fix contextmenu misalignment

--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,7 @@ button {
 main {
 	width: 100vw;
 	height: 100vh;
+	position: relative;
 	overflow: hidden;
 
 	min-width: 70em;
@@ -106,6 +107,16 @@ main > workspace- > .section {
 	box-shadow: var(--overlay-box-shadow);
 	border-radius: 2em;
 }
+
+workspace- > overlays- {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+/* Loading screen */
 
 loading-screen {
 	z-index: 1;
